fix wave overflow

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -92,5 +92,6 @@
 .wave,
 .wave * {
   width: 100% !important;
-  height: 110px;
+  height: 100%;
+  margin-top: 80px;
 }
