--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,8 +10,8 @@
 
 body {
   cursor: default;
-  max-width: 100vw;
-  overflow-x: hidden;
+  max-width: 100vw !important;
+  overflow-x: hidden !important;
 }
 
 a {
